[gd_scene format=3 uid="uid://cytfxp751gt05"]

[ext_resource type="Script" uid="uid://c8758fs3wnw4y" path="res://DebugAndTesting/testing_window.gd" id="1_iju7p"]

[node name="TestingWindow" type="Window" unique_id=1546683025]
process_mode = 3
oversampling_override = 1.0
title = "Web Game Debug and Testing"
initial_position = 1
size = Vector2i(400, 400)
unresizable = true
script = ExtResource("1_iju7p")

[node name="Control" type="Control" parent="." unique_id=852130841]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 800.0

[node name="ColorRect" type="ColorRect" parent="Control" unique_id=995132087]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12347304, 0.12347304, 0.12347304, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control" unique_id=2032144960]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="KillPlayerButton" type="Button" parent="Control/VBoxContainer" unique_id=740516909]
layout_mode = 2
text = "Kill Player- Signal"

[node name="ResetPlayerDataButton" type="Button" parent="Control/VBoxContainer" unique_id=2144252541]
layout_mode = 2
text = "Reset player data"

[node name="LevelDebugRoomButton" type="Button" parent="Control/VBoxContainer" unique_id=559891260]
layout_mode = 2
text = "Level: Debug Room"

[node name="SpawnBombButton" type="Button" parent="Control/VBoxContainer" unique_id=1765467779]
layout_mode = 2
text = "Spawn: 500kg Bomb"

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer" unique_id=1994822422]
layout_mode = 2

[node name="VScrollBar" type="VScrollBar" parent="Control/VBoxContainer/ScrollContainer" unique_id=729644609]
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="Control/VBoxContainer/KillPlayerButton" to="." method="_on_kill_player_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ResetPlayerDataButton" to="." method="_on_reset_player_data_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LevelDebugRoomButton" to="." method="_on_level_debug_room_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SpawnBombButton" to="." method="_on_spawn_bomb_button_pressed"]
